Add linktree + change github icon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -52,6 +52,8 @@
 
     {% for entry in site.data.contact %}
       {% capture url %}
+        {%- if entry.type == 'linktree' -%}
+          https://linktr.ee/{{ site.linktree.username }}
         {%- if entry.type == 'github' -%}
           https://github.com/{{ site.github.username }}
         {%- elsif entry.type == 'twitter' -%}
