Better subtitle spacing for desktop

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1546,7 +1546,7 @@ $sidebar-display: "sidebar-display";
       .site-subtitle {
         @extend %profile-ml;
 
-        word-spacing: 0;
+        // word-spacing: 0;
         margin-top: 0.3rem;
       }
 
