--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -630,9 +630,9 @@ $sidebar-display: "sidebar-display";
   }
 
   #avatar {
-    &:hover > a {
-      border-color: #fff;
-    }
+    // &:hover > a {
+    //   border-color: #fff;
+    // }
 
     > a {
       display: block;
@@ -642,24 +642,24 @@ $sidebar-display: "sidebar-display";
       // border: 2px solid #b6b6b6;
       overflow: hidden;
       transform: translateZ(0); // fixed the zoom in Safari
-      -webkit-transition: border-color 0.35s ease-in-out;
-      -moz-transition: border-color 0.35s ease-in-out;
-      transition: border-color 0.35s ease-in-out;
+      // -webkit-transition: border-color 0.35s ease-in-out;
+      // -moz-transition: border-color 0.35s ease-in-out;
+      // transition: border-color 0.35s ease-in-out;
     }
 
     img {
       width: 100%;
       height: 100%;
-      -webkit-transition: transform 0.5s;
-      -moz-transition: transform 0.5s;
-      transition: transform 0.5s;
+      // -webkit-transition: transform 0.5s;
+      // -moz-transition: transform 0.5s;
+      // transition: transform 0.5s;
 
-      &:hover {
-        -ms-transform: scale(1.2);
-        -moz-transform: scale(1.2);
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-      }
+      // &:hover {
+      //   -ms-transform: scale(1.2);
+      //   -moz-transform: scale(1.2);
+      //   -webkit-transform: scale(1.2);
+      //   transform: scale(1.2);
+      // }
     }
   } // #avatar
 
