More accentuated bold text

--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -15,6 +15,7 @@
 
   /* common color */
   --text-color: rgb(175, 176, 177);
+  --text-bold-color: #dadada;
   --heading-color: #cccccc;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
