--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -10,6 +10,7 @@
   --main-border-color: #f3f3f3;
   --btn-border-color: #e9ecef;
   --text-color: #34343c;
+  --text-bold-color: black;
   --heading-color: black;
   --blockquote-border-color: #eee;
   --blockquote-text-color: #9a9a9a;
