--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -53,6 +53,10 @@ body {
   font-family: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
 }
 
+p b, p strong {
+  color: var(--text-bold-color);
+}
+
 /* --- Typography --- */
 
 h1 {
